// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderBookCard Test Test Snapshot Test Snapshot 1`] = `
<div>
  <Styled(Card)
    margin="0 0 0 5px"
    title={
      <styled.div>
        ORDERBOOKS
      </styled.div>
    }
    width="400px"
  >
    <styled.div
      center={true}
      horizontal={true}
      width="370px"
    >
      <styled.div>
        <div
          className="status-list-wrapper"
        >
          <ul>
            <li
              className="right"
            >
              <span
                className="title"
              >
                BID
              </span>
            </li>
            <li
              key="0"
            >
              <span
                className="content"
              >
                NANUNDEFINED
              </span>
              <span
                className="title"
              >
                0.008000
              </span>
            </li>
            <li
              key="1"
            >
              <span
                className="content"
              >
                NANUNDEFINED
              </span>
              <span
                className="title"
              >
                0.007000
              </span>
            </li>
          </ul>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="status-list-wrapper"
        >
          <ul>
            <li>
              <span
                className="title"
              >
                ASK
              </span>
            </li>
            <li
              key="0"
            >
              <span
                className="title"
              >
                0.007000
              </span>
              <span
                className="content"
              >
                NANUNDEFINED
              </span>
            </li>
            <li
              key="1"
            >
              <span
                className="title"
              >
                0.007000
              </span>
              <span
                className="content"
              >
                NANUNDEFINED
              </span>
            </li>
          </ul>
        </div>
      </styled.div>
    </styled.div>
  </Styled(Card)>
</div>
`;

exports[`OrderBookCard Test Test Snapshot Test Snapshot 2`] = `
<div>
  <Styled(Card)
    margin="0 0 0 5px"
    title={
      <styled.div>
        ORDERBOOKS
      </styled.div>
    }
    width="400px"
  >
    <styled.div
      center={true}
      horizontal={true}
      width="370px"
    >
      <styled.div>
        <div
          className="status-list-wrapper"
        >
          <ul>
            <li
              className="right"
            >
              <span
                className="title"
              >
                BID
              </span>
            </li>
            <li
              className="block-title t-center"
            >
              -
            </li>
          </ul>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="status-list-wrapper"
        >
          <ul>
            <li>
              <span
                className="title"
              >
                ASK
              </span>
            </li>
            <li
              className="block-title t-center"
            >
              -
            </li>
          </ul>
        </div>
      </styled.div>
    </styled.div>
  </Styled(Card)>
</div>
`;
